# omni-embed-demo-app

./: .coderabbit.yaml  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: .gitignore  settings.json
alembic/: env.py
alembic/versions/: f42f8e98c205_initial_migration.py
app/: config.py  db.py  main.py  models.py
app/auth/: csrf.py  deps.py  password.py  session.py
app/omni/: client.py  standard.py
app/routes/: api.py  audit.py  pages.py  rate_limit.py
app/templates/: base.html  embed.html  index.html  login.html  me.html  register.html
docs/: branching-commit.md  commands.md  dev-workflow.md  repo-map.md  security.md  testing-quality.md  todo.md
tests/: conftest.py  test_auth_integration.py  test_omni_embed.py  test_pages.py
tests/auth/: test_csrf.py  test_deps.py  test_password.py  test_session.py
